gnome-settings-daemon (3.16.2-1) UNRELEASED; urgency=medium

  * New upstream release.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Sat, 30 May 2015 22:31:54 +0200

gnome-settings-daemon (3.14.2-3) unstable; urgency=medium

  * Team upload
  * power-make-sure-to-set-an-error-when-GDBus-set_prope.patch:
    set the error when a GDBus set_property callback fails
    (hopefully Closes: #775877)

 -- Simon McVittie <smcv@debian.org>  Mon, 09 Mar 2015 09:49:20 +0000

gnome-settings-daemon (3.14.2-2) unstable; urgency=medium

  * 01_reinstate_updates_plugin.patch: reinstate the “updates” plugin, 
    since gnome-software is not in jessie and we need an update 
    mechanism.
  * Use patch-translations.mk.
  * Reintroduce GNOME 3.12 translations.
  * Update packagekit-glib build-dependency.

 -- Josselin Mouette <joss@debian.org>  Thu, 04 Dec 2014 10:47:04 +0100

gnome-settings-daemon (3.14.2-1) unstable; urgency=medium

  * New upstream translation and bugfix release.
  * 30_xrandr_dbus_init.patch: patch from upstream git. Fixes a crash
    due to a race condition in dbus initialization.

 -- Josselin Mouette <joss@debian.org>  Sun, 30 Nov 2014 12:46:20 +0100

gnome-settings-daemon (3.14.1-1) unstable; urgency=medium

  * New upstream release.
  * debian/control.in: Bump Standards-Version to 3.9.6 (no further changes)

 -- Laurent Bigonville <bigon@debian.org>  Sat, 18 Oct 2014 09:47:37 +0200

gnome-settings-daemon (3.14.0-2) unstable; urgency=medium

  * Do not enable networkmanager support on !linux architectures
  * debian/control.in:
    - Add libnm-util-dev to the build-dependencies
    - Depends against libpam-systemd instead of plain systemd package, g-s-d
      needs logind for several power related functionalities

 -- Laurent Bigonville <bigon@debian.org>  Sun, 05 Oct 2014 04:23:11 +0200

gnome-settings-daemon (3.14.0-1) unstable; urgency=medium

  * New upstream release.
  * debian/gnome-settings-daemon.install: stop installing