@@ -15,7 +15,7 @@ Build-Depends: cdbs,
                autotools-dev,
                intltool (>= 0.37.1),
                libglib2.0-dev (>= 2.37.7),
-               libgtk-3-dev (>= 3.7.8),
+               libgtk-3-dev (>= 3.16),
                libnm-glib-dev (>= 0.9.9.1) [linux-any],
                libnm-util-dev (>= 0.9.9.1) [linux-any],
                libnotify-dev (>= 0.7.3),
@@ -26,7 +26,7 @@ Build-Depends: cdbs,
                libxext-dev,
                libx11-dev,
                libibus-1.0-dev (>= 1.5.2),
-               gsettings-desktop-schemas-dev (>= 3.9.91),
+               gsettings-desktop-schemas-dev (>= 3.16),
                libgnome-desktop-3-dev (>= 3.11.1),
                libpulse-dev (>= 2.0),
                libcanberra-gtk3-dev,
@@ -55,7 +55,7 @@ Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          libpam-systemd [!hurd-any !kfreebsd-any],
-         gsettings-desktop-schemas (>= 3.10.0),
+         gsettings-desktop-schemas (>= 3.16),
          nautilus-data (>= 2.91.3-1)
 Recommends: pulseaudio
 Breaks: gnome-session (<< 2.24),
